some refactors and styleing. Adding on click handler - doing nothing yet

--- a/static/style.css
+++ b/static/style.css
@@ -11,4 +11,9 @@
 
 .app-table .app-table-tr:nth-child(even) {
     background-color: #dddddd;
-  }
+}
+
+.app-table .app-table-tr:hover {
+    background-color: #aaaaaa;
+    cursor: pointer;
+}
