--- a/static/style.css
+++ b/static/style.css
@@ -10,11 +10,11 @@
 }
 
 .app-table .app-table-tr:nth-child(even) {
-    background-color: #dddddd;
+    background-color: #f2f2f2;
 }
 
 .app-table .app-table-tr--hover:hover {
-    background-color: #aaaaaa;
+    background-color: #cccccc;
     cursor: pointer;
 }
 
