styling the main table a bit

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,13 @@
+.app-container {
+    margin: 4rem 5%;
+}
+
+@media only screen and (min-width: 768px) {
+    .app-container {
+        margin: 4rem 10%;
+    }
+}
+
 .app-table {
     border: 1px solid #dddddd;
     border-collapse: collapse;
