--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,3 @@
-.app-container {
-    margin: 4rem 5%;
-    font-family: "Open sans";
-}
-
-@media only screen and (min-width: 768px) {
-    .app-container {
-        margin: 4rem 10%;
-    }
-}
-
 .app-text-align-center {
     text-align: center;
 }
@@ -17,11 +6,22 @@
     text-align: left;
 }
 
+.app-container {
+    font-family: "Open sans";
+    margin: 4rem 5%;
+}
+
+@media only screen and (min-width: 768px) {
+    .app-container {
+        margin: 4rem 10%;
+    }
+}
+
 .app-table {
     border: 1px solid #dddddd;
     border-collapse: collapse;
-    width: 100%;
     font-size: 1.25rem;
+    width: 100%;
 }
 
 .app-table-header {
@@ -47,21 +47,18 @@
 }
 
 .app-return-button {
-    color: black;
-    background-color: white;
-    border-radius: .25rem;
-
+    background-color: #ffffff;
     border: 1px solid #cccccc;
-
-    padding: .25rem .75rem;
-
+    border-radius: .25rem;
+    color: black;
+    display: inline-block;
     font-size: 1.2rem;
     margin-bottom: 0.75rem;
-    display: inline-block;
+    padding: .25rem .75rem;
 }
 
 .app-return-button:hover {
-    cursor: pointer;
-    color: white;
     background-color: #212529;
+    color: #ffffff;
+    cursor: pointer;
 }
